<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_default"
    android:layout_marginLeft="@dimen/margin_half"
    android:layout_marginRight="@dimen/margin_half"
    android:background="@color/cardview_dark_background"
    app:cardCornerRadius="@dimen/corner_radius_5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_half"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_half"
            android:text="@string/name"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_default"
            android:textStyle="bold|italic"
            />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_size_default"
            android:text="@string/description"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_default"
            android:textStyle="bold|italic"
            />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_half"
            android:text="@string/type"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_default"
            android:textStyle="bold|italic"
            />


    </LinearLayout>

</android.support.v7.widget.CardView>


