<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/title_rating"
        android:textColor="@color/primary"
        android:textSize="@dimen/text_size_title"/>

    <RatingBar
        android:id="@+id/rbMovieRating"
        style="@style/StarSmallRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:layout_marginTop="@dimen/padding_default"
        android:isIndicator="false"
        android:max="10"
        android:numStars="10"
        android:stepSize="0.5"
        android:theme="@style/StarRatingBar"
        tools:rating="7.5"

        />


    <ProgressBar
        android:id="@+id/pbPagination"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:indeterminate="true"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_half"
        android:ellipsize="end"
        android:gravity="center"
        android:text="@string/err_message_input_rating"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_half"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_half"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_weight="1"
            android:text="@string/btn_cancel"
            android:textColor="@color/darkGray"
            />

        <Button
            android:id="@+id/btnRate"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_rate"/>
    </LinearLayout>

</LinearLayout>