<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/sign_in_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_double"
        android:layout_marginRight="@dimen/margin_double"
        android:layout_gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_default"
            android:gravity="center"
            android:text="@string/authorize_please"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_userName_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/padding_default"
                android:drawableStart="@drawable/ic_user"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHighlight="@color/colorPrimary"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:textColorHint="@color/colorAccent"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/padding_default"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/colorPrimary"
                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/bt_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_half"
            android:background="@color/colorPrimary"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/bt_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_triple"
            android:gravity="center"
            android:paddingEnd="@dimen/padding_default"
            android:paddingStart="@dimen/padding_default"
            android:text="@string/tos_pp" />

    </LinearLayout>
</ScrollView>