<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/sign_in_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/margin_double"
        android:layout_marginRight="@dimen/margin_double"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_default"
            android:gravity="center"
            android:text="@string/enter_name"
            android:textSize="@dimen/text_size_default"
            android:textStyle="bold"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_title_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/padding_default"
                android:drawableStart="@drawable/ic_new_list"
                android:hint="@string/hint_title"
                android:inputType="text"
                android:textColorHighlight="@color/colorPrimary"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_description_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/padding_default"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/hint_description"
                android:inputType="text"
                android:textColorHint="@color/colorPrimary"
                />

        </android.support.design.widget.TextInputLayout>
        <ProgressBar
            android:id="@+id/pbPagination"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:indeterminate="true"
            android:visibility="gone"
            tools:visibility="visible" />


        <Button
            android:id="@+id/bt_addList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_double"
            android:layout_marginBottom="@dimen/margin_double"
            android:background="@color/colorPrimary"
            android:text="@string/btn_add_list"
            android:textColor="@android:color/white"/>


    </LinearLayout>
</ScrollView>